<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">教室管家</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="changedatebutton">change date</string>
    <string name="title_activity_pickertest">Pickertest</string>
    <string name="startdate">起始日期：</string>
    <string name="enddate">截止日期：</string>
    <string name="starttime">每天起始时间：</string>
    <string name="endtime">每天截止时间：</string>
    <string name="classroomno">教室号：</string>
    <string name="classroomnotip">请选择教室号</string>
    <string name="classroomtype">教室类型：</string>
    <string name="classroomtypetip">请输入教师类型</string>
    <string name="classroomnoofpeople">教室人数：</string>
    <string name="classroomstatus">教室状态：</string>
    <string name="classroomnoofpeopletip">请输入教室人数</string>
    <string name="classroomstatustip">请输入教室状态</string>
    <string name="search">搜索</string>
    <string name="hissearch">历史查询</string>
    <string name="set">设置</string>
    <string name="title">标题栏</string>
    <string name="date">日期：</string>
    <string name="time">时间：</string>
    <string name="availableTime">最近空闲时段：</string>
    <string name="classroomstatusspec">教室占用详情</string>
    <string name="person">姓名：</string>
    <string name="school">系别：</string>
    <string name="usage">用途：</string>
    <string name="available_results">查询结果如下：</string>
    <string name="historical_results">历史查询结果如下：</string>
    <string name="title_activity_cls_spec">ClsSpec</string>
    <string name="action_share">分享到微信</string>
    <string name="bestOverlapText">最长空闲时间：</string>
    <string name="spec">详情></string>
    
    <string name="his_date">日期：</string>
    <string name="his_duration">查询天数：</string>
    <string name="his_time">时间：</string>
    <string name="his_roomid">教室：</string>
    <string name="his_type">教室类型：</string>
    <string name="his_number">教室人数：</string>
    <string name="his_availability">教室状态：</string>
    <string name="title_activity_his_results">历史查询结果</string>
    <string name="title_activity_his__cls_spec">结果详情</string>
    
    <string name="youtui_appId">1</string>

</resources>