<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:columnCount="4" >

    <TextView
        android:id="@+id/spec_persontext"
        android:layout_column="0"
        android:layout_gravity="left"
        android:layout_row="1"
        android:text="@string/person" />

    <TextView
        android:id="@+id/spec_person"
        android:layout_column="1"
        android:layout_gravity="left"
        android:layout_row="1"
        android:width="120dp"/>
    
    <TextView
        android:id="@+id/spec_schooltext"
        android:layout_column="0"
        android:layout_gravity="left"
        android:layout_row="2"
        android:text="@string/school" />

    <TextView
        android:id="@+id/spec_school"
        android:layout_column="1"
        android:layout_columnSpan="3"
        android:layout_gravity="left"
        android:layout_row="2"/>
    
    <TextView
        android:id="@+id/spec_datetext"
        android:layout_column="0"
        android:layout_gravity="left"
        android:layout_row="0"
        android:text="@string/date" />

    <TextView
        android:id="@+id/spec_date"
        android:layout_column="1"
        android:layout_gravity="left"
        android:layout_row="0"
        android:width="120dp"/>
    
    <TextView
        android:id="@+id/spec_timetext"
        android:layout_column="2"
        android:layout_gravity="left"
        android:layout_row="0"
        android:text="@string/time" />

    <TextView
        android:id="@+id/spec_time"
        android:layout_column="3"
        android:layout_gravity="left"
        android:layout_row="0"/>
    
    <TextView
        android:id="@+id/spec_usagetext"
        android:layout_column="0"
        android:layout_gravity="left"
        android:layout_row="3"
        android:text="@string/usage" />

    <TextView
        android:id="@+id/spec_usage"
        android:layout_column="1"
        android:layout_columnSpan="3"
        android:layout_gravity="left"
        android:layout_row="3"/>

</GridLayout>
