<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="4dp">
    
    

<GridLayout 
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:columnCount="2">
    
    <TextView
        android:id="@+id/startdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="0"
        android:textSize="16sp"
        android:text="@string/startdate"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="6dp" />
    
    <EditText
        android:id="@+id/startdateDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="1"
        android:cursorVisible="false"
        android:editable="false"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="6dp" />
    
    <TextView
        android:id="@+id/enddate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:textSize="16sp"
        android:text="@string/enddate"
        android:layout_marginBottom="6dp" />

    <EditText
        android:id="@+id/enddateDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="1"
        android:cursorVisible="false"
        android:editable="false"
        android:layout_marginBottom="6dp" />
    
    <TextView
        android:id="@+id/starttime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="0"
        android:textSize="16sp"
        android:text="@string/starttime"
        android:layout_marginBottom="6dp" />

    <EditText
        android:id="@+id/starttimeDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="1"
        android:cursorVisible="false"
        android:editable="false"
        android:layout_marginBottom="6dp" />
    
	<TextView
        android:id="@+id/endtime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="0"
        android:textSize="16sp"
        android:text="@string/endtime"
        android:layout_marginBottom="6dp" />

    <EditText
        android:id="@+id/endtimeDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="1"
        android:cursorVisible="false"
        android:editable="false"
        android:layout_marginBottom="6dp" />

    <TextView
        android:id="@+id/classroomtype"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="4"
        android:layout_column="0"
        android:textSize="16sp"
        android:text="@string/classroomtype"
        android:layout_marginBottom="6dp" />

    <Button
        android:id="@+id/classroomtypebtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:layout_row="4"
        android:textSize="14sp"
        android:layout_marginBottom="6dp" />

    <TextView
        android:id="@+id/classroomnoofpeople"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="5"
        android:layout_column="0"
        android:textSize="16sp"
        android:text="@string/classroomnoofpeople"
        android:layout_marginBottom="6dp" />
    
	<Button
	    android:id="@+id/classroomnoofpeoplebtn"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_column="1"
	    android:layout_gravity="fill_horizontal"
	    android:layout_row="5"
	    android:textSize="14sp"
	    android:layout_marginBottom="6dp" />
	
	<TextView
        android:id="@+id/classroomno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="6"
        android:layout_column="0"
        android:textSize="16sp"
        android:text="@string/classroomno"
        android:layout_marginBottom="6dp" />

    
    <Button
		android:id="@+id/classroomnobtn"
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:layout_gravity="fill_horizontal"
		android:layout_row="6"
        android:layout_column="1"
		android:textSize="14sp"
		android:layout_marginBottom="6dp"/>

    <TextView
        android:id="@+id/classroomstatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="7"
        android:layout_column="0"
        android:textSize="16sp"
        android:text="@string/classroomstatus" />

    <Spinner
        android:id="@+id/classroomstatusspinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:gravity="center_horizontal"
        android:layout_column="1"
        android:layout_row="7"
        android:prompt="@string/classroomstatustip" />

</GridLayout>

    <Button
        android:id="@+id/searchbtn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_above="@+id/hissearchbtn"
        android:text="@string/search" >

    </Button>

    <Button
        android:id="@+id/hissearchbtn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/hissearch" />

</RelativeLayout>