<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/his_query_roomid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/his_roomid" />

        <TextView
            android:id="@+id/his_query_result_roomid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/his_query_availability"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/his_availability" />

        <TextView
            android:id="@+id/his_query_result_availability"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/his_query_startday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/his_date" />

        <TextView
            android:id="@+id/his_query_result_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/his_query_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/his_duration" />

        <TextView
            android:id="@+id/his_query_result_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/his_query_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/his_time" />

        <TextView
            android:id="@+id/his_query_result_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/his_query_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/his_type" />

        <TextView
            android:id="@+id/his_query_result_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/his_query_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/his_number" />

        <TextView
            android:id="@+id/his_query_result_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>