<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:columnCount="2">

    <TextView
        android:id="@+id/spec_classroomnotext"
        android:layout_column="0"
        android:layout_gravity="left"
        android:layout_row="0"
        android:text="@string/classroomno" />

    <TextView
        android:id="@+id/spec_classroomno"
        android:layout_column="1"
        android:layout_gravity="left"
        android:layout_row="0"/>
    
    <TextView
        android:id="@+id/spec_classroomtypetext"
        android:layout_column="0"
        android:layout_gravity="left"
        android:layout_row="1"
        android:text="@string/classroomtype" />

    <TextView
        android:id="@+id/spec_classroomtype"
        android:layout_column="1"
        android:layout_gravity="left"
        android:layout_row="1"/>
    
    <TextView
        android:id="@+id/spec_classroomnoofpeopletext"
        android:layout_column="0"
        android:layout_gravity="left"
        android:layout_row="2"
        android:text="@string/classroomnoofpeople" />

    <TextView
        android:id="@+id/spec_classroomnoofpeople"
        android:layout_column="1"
        android:layout_gravity="left"
        android:layout_row="2"/>
    
    <TextView
        android:id="@+id/spec_classroomstatusspectext"
        android:layout_width="match_parent"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="left"
        android:layout_row="3"
        android:background="#222"
        android:text="@string/classroomstatusspec" />
    
    <ListView
        android:id="@+id/spec_statuslist"
        android:layout_width="match_parent"
        android:layout_height="376dp"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_vertical"
        android:layout_row="4"
        android:dividerHeight="2dp" >

    </ListView>

</GridLayout>