<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="8dp"
    android:paddingTop="8dp"
    android:paddingLeft="6dp"
    android:columnCount="5" >

    <TextView
        android:id="@+id/result_classroomno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_row="0"
        android:textColor="@android:color/holo_blue_light"
        android:textSize="16sp"/>

        <TextView
            android:id="@+id/dateTicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:layout_column="0"
        android:layout_row="1"/>
        
        <TextView
            android:id="@+id/result_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
        android:layout_row="1"
        android:paddingRight="50dp"
        android:textSize="12sp"/>
        
        <TextView
            android:id="@+id/overlapTicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bestOverlapText"
            android:layout_column="2"
        android:layout_row="0"
        android:textSize="12sp"/>
        
        <TextView
            android:id="@+id/result_overlap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="3"
        android:layout_row="0"
        android:textSize="12sp"/>


        <TextView
            android:id="@+id/timeTicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/availableTime"
            android:layout_column="2"
        android:layout_row="1"
        android:textSize="12sp"/>
        
        <TextView
            android:id="@+id/result_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="3"
        android:layout_row="1"
        android:textSize="12sp"/>
<!--         
        <TextView
            android:id="@+id/toSpec"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="4"
        	android:layout_row="0"
        	android:layout_rowSpan="2"
        	android:textSize="12sp"
        	android:paddingLeft="50dp"
        	android:paddingTop="13dp"
        	android:text="@string/spec"
        	android:textColor="@android:color/holo_blue_dark"/> -->


</GridLayout>